resources/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: team-2
spec:
  type: NodePort
  selector:
    app: client-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
